// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Result /> renders conventionnal indemnite with warning toast 1`] = `
.c10 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c9,
[aria-selected="true"] .c10 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c11 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.8rem;
  font-weight: 600;
}

.c13 {
  max-height: 0px;
  opacity: 0;
  overflow: auto;
  padding: 0;
  -webkit-transition: opacity 0.5s ease-in-out;
  transition: opacity 0.5s ease-in-out;
}

.c8 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
}

.c8:hover,
.c8:focus,
.c8:focus-within,
.c8[aria-expanded="true"] {
  color: #3e486e;
}

.c12 {
  margin-left: 1rem;
}

.c16 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c18 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c6 {
  width: calc(50% * 0.9100320789890648);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c15 {
  width: calc(50% * 1);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c7 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

.c17 {
  margin: 2rem 0;
}

@media print {
  .c16 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:980px) {
  .c5 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c6 {
    width: calc(100% * 0.9100320789890648);
  }
}

@media (max-width:980px) {
  .c15 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c7 {
    width: 100%;
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à 
    <strong
      class="c1 c2"
    >
      17 444,44
       € brut
    </strong>
    .
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c3"
  >
    <div>
      <div
        class="c4"
      >
        Votre indemnite légale
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <span
          class="c7"
        >
          15 875,00
           € brut
        </span>
      </div>
      <div>
        <div
          aria-expanded="false"
          class="c8"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="c9 c10"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <span
            class="c11 c12"
            font-size="hsmall"
            font-weight="600"
          >
            Voir le détail du calcul
          </span>
        </div>
        <div
          class="c13"
        >
          <h2
            class="c0"
          >
            Éléments saisis
          </h2>
          <ul>
            <li>
              Ancienneté totale (A)
               : 
              <strong>
                13.08
              </strong>
            </li>
            <li>
              Licenciement pour inaptitude
               : 
              <strong>
                non
              </strong>
            </li>
            <li>
              Salaire de réference (Sref)
               : 
              <strong>
                4500
              </strong>
            </li>
            <li>
              Ancienneté au delà de 10ans (A2)
               : 
              <strong>
                3.08
              </strong>
            </li>
          </ul>
          <h2
            class="c0"
          >
            Formule
          </h2>
          <div
            class="c14"
          >
            <div>
              <span
                class="katex-display"
              >
                <span
                  class="katex"
                >
                  <span
                    class="katex-mathml"
                  >
                    <math
                      display="block"
                      xmlns="http://www.w3.org/1998/Math/MathML"
                    >
                      <semantics>
                        <mrow>
                          <mo
                            stretchy="false"
                          >
                            (
                          </mo>
                          <mfrac>
                            <mn>
                              1
                            </mn>
                            <mn>
                              4
                            </mn>
                          </mfrac>
                          <mo>
                            ×
                          </mo>
                          <mi>
                            S
                          </mi>
                          <mi>
                            r
                          </mi>
                          <mi>
                            e
                          </mi>
                          <mi>
                            f
                          </mi>
                          <mo>
                            ×
                          </mo>
                          <mn>
                            10
                          </mn>
                          <mo
                            stretchy="false"
                          >
                            )
                          </mo>
                          <mo>
                            +
                          </mo>
                          <mo
                            stretchy="false"
                          >
                            (
                          </mo>
                          <mfrac>
                            <mn>
                              1
                            </mn>
                            <mn>
                              3
                            </mn>
                          </mfrac>
                          <mo>
                            ×
                          </mo>
                          <mi>
                            S
                          </mi>
                          <mi>
                            r
                          </mi>
                          <mi>
                            e
                          </mi>
                          <mi>
                            f
                          </mi>
                          <mo>
                            ×
                          </mo>
                          <mi>
                            A
                          </mi>
                          <mn>
                            2
                          </mn>
                          <mo
                            stretchy="false"
                          >
                            )
                          </mo>
                        </mrow>
                        <annotation
                          encoding="application/x-tex"
                        >
                          (\\frac{1}{4} \\times Sref \\times 10) + (\\frac{1}{3} \\times Sref \\times A2)
                        </annotation>
                      </semantics>
                    </math>
                  </span>
                  <span
                    aria-hidden="true"
                    class="katex-html"
                  >
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:2.00744em;vertical-align:-0.686em;"
                      />
                      <span
                        class="mopen"
                      >
                        (
                      </span>
                      <span
                        class="mord"
                      >
                        <span
                          class="mopen nulldelimiter"
                        />
                        <span
                          class="mfrac"
                        >
                          <span
                            class="vlist-t vlist-t2"
                          >
                            <span
                              class="vlist-r"
                            >
                              <span
                                class="vlist"
                                style="height:1.32144em;"
                              >
                                <span
                                  style="top:-2.314em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="mord"
                                  >
                                    <span
                                      class="mord"
                                    >
                                      4
                                    </span>
                                  </span>
                                </span>
                                <span
                                  style="top:-3.23em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="frac-line"
                                    style="border-bottom-width:0.04em;"
                                  />
                                </span>
                                <span
                                  style="top:-3.677em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="mord"
                                  >
                                    <span
                                      class="mord"
                                    >
                                      1
                                    </span>
                                  </span>
                                </span>
                              </span>
                              <span
                                class="vlist-s"
                              >
                                ​
                              </span>
                            </span>
                            <span
                              class="vlist-r"
                            >
                              <span
                                class="vlist"
                                style="height:0.686em;"
                              >
                                <span />
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="mclose nulldelimiter"
                        />
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                      />
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.05764em;"
                      >
                        S
                      </span>
                      <span
                        class="mord mathnormal"
                      >
                        re
                      </span>
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.10764em;"
                      >
                        f
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:1em;vertical-align:-0.25em;"
                      />
                      <span
                        class="mord"
                      >
                        10
                      </span>
                      <span
                        class="mclose"
                      >
                        )
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        +
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:2.00744em;vertical-align:-0.686em;"
                      />
                      <span
                        class="mopen"
                      >
                        (
                      </span>
                      <span
                        class="mord"
                      >
                        <span
                          class="mopen nulldelimiter"
                        />
                        <span
                          class="mfrac"
                        >
                          <span
                            class="vlist-t vlist-t2"
                          >
                            <span
                              class="vlist-r"
                            >
                              <span
                                class="vlist"
                                style="height:1.32144em;"
                              >
                                <span
                                  style="top:-2.314em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="mord"
                                  >
                                    <span
                                      class="mord"
                                    >
                                      3
                                    </span>
                                  </span>
                                </span>
                                <span
                                  style="top:-3.23em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="frac-line"
                                    style="border-bottom-width:0.04em;"
                                  />
                                </span>
                                <span
                                  style="top:-3.677em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="mord"
                                  >
                                    <span
                                      class="mord"
                                    >
                                      1
                                    </span>
                                  </span>
                                </span>
                              </span>
                              <span
                                class="vlist-s"
                              >
                                ​
                              </span>
                            </span>
                            <span
                              class="vlist-r"
                            >
                              <span
                                class="vlist"
                                style="height:0.686em;"
                              >
                                <span />
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="mclose nulldelimiter"
                        />
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                      />
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.05764em;"
                      >
                        S
                      </span>
                      <span
                        class="mord mathnormal"
                      >
                        re
                      </span>
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.10764em;"
                      >
                        f
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:1em;vertical-align:-0.25em;"
                      />
                      <span
                        class="mord mathnormal"
                      >
                        A
                      </span>
                      <span
                        class="mord"
                      >
                        2
                      </span>
                      <span
                        class="mclose"
                      >
                        )
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
          <h2
            class="c0"
          >
            Sources
          </h2>
          <ul>
            <li>
              <a
                aria-label="Article L.1234-9 (nouvelle fenêtre)"
                href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000035644154&cidTexte=LEGITEXT000006072050&dateTexte=20170924"
                rel="noopener noreferrer"
                target="_blank"
                title="Consultez l’article l.1234-9"
              >
                Article L.1234-9
              </a>
            </li>
            <li>
              <a
                aria-label="Article R1234-1 à R1234-4 (nouvelle fenêtre)"
                href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000018537572&cidTexte=LEGITEXT000006072050&dateTexte=20170927"
                rel="noopener noreferrer"
                target="_blank"
                title="Consultez l’article r1234-1 à r1234-4"
              >
                Article R1234-1 à R1234-4
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c4"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c5"
      >
        <div
          class="c15"
        />
        <span
          class="c7"
        >
          17 444,44
           € brut
        </span>
      </div>
      <div>
        <div
          aria-expanded="false"
          class="c8"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="c9 c10"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <span
            class="c11 c12"
            font-size="hsmall"
            font-weight="600"
          >
            Voir le détail du calcul
          </span>
        </div>
        <div
          class="c13"
        >
          <h2
            class="c0"
          >
            Éléments saisis
          </h2>
          <ul>
            <li>
              Salaire de référence (Sref)
               : 
              <strong>
                4000
              </strong>
            </li>
            <li>
              Coefficient d'indemnité conventionnel (C)
               : 
              <strong>
                0.33
              </strong>
            </li>
            <li>
              Ancienneté conventionnelle (A)
               : 
              <strong>
                13.08
              </strong>
            </li>
          </ul>
          <h2
            class="c0"
          >
            Formule
          </h2>
          <div
            class="c14"
          >
            <div>
              <span
                class="katex-display"
              >
                <span
                  class="katex"
                >
                  <span
                    class="katex-mathml"
                  >
                    <math
                      display="block"
                      xmlns="http://www.w3.org/1998/Math/MathML"
                    >
                      <semantics>
                        <mrow>
                          <mo
                            stretchy="false"
                          >
                            (
                          </mo>
                          <mi>
                            C
                          </mi>
                          <mo>
                            ×
                          </mo>
                          <mi>
                            S
                          </mi>
                          <mi>
                            r
                          </mi>
                          <mi>
                            e
                          </mi>
                          <mi>
                            f
                          </mi>
                          <mo>
                            ×
                          </mo>
                          <mi>
                            A
                          </mi>
                          <mo
                            stretchy="false"
                          >
                            )
                          </mo>
                        </mrow>
                        <annotation
                          encoding="application/x-tex"
                        >
                          (C \\times Sref \\times A)
                        </annotation>
                      </semantics>
                    </math>
                  </span>
                  <span
                    aria-hidden="true"
                    class="katex-html"
                  >
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:1em;vertical-align:-0.25em;"
                      />
                      <span
                        class="mopen"
                      >
                        (
                      </span>
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.07153em;"
                      >
                        C
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                      />
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.05764em;"
                      >
                        S
                      </span>
                      <span
                        class="mord mathnormal"
                      >
                        re
                      </span>
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.10764em;"
                      >
                        f
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:1em;vertical-align:-0.25em;"
                      />
                      <span
                        class="mord mathnormal"
                      >
                        A
                      </span>
                      <span
                        class="mclose"
                      >
                        )
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c16 c17"
  >
    <div
      class="c18"
      role="alert"
    >
      Si un emploi équivalent a été trouvé
      <ul>
        <li>
          par l’employeur
        </li>
        <li>
          dans une autre entreprise
        </li>
        <li>
          avant la fin du préavis
        </li>
        <li>
          et que le salarié l’accepte
        </li>
      </ul>
      Alors l’indemnité de licenciement conventionnelle est réduite d’un tiers et passe donc à
       
      <strong
        class="c1"
      >
        11629.62
         €
      </strong>
      <br />
      Attention, ce tiers (
      5814.81
       €) est dû si la période d’essai dans ce nouvel emploi reste sans suite.
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;

exports[`<Result /> renders legal indemnite 1`] = `
.c10 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c9,
[aria-selected="true"] .c10 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c11 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.8rem;
  font-weight: 600;
}

.c13 {
  max-height: 0px;
  opacity: 0;
  overflow: auto;
  padding: 0;
  -webkit-transition: opacity 0.5s ease-in-out;
  transition: opacity 0.5s ease-in-out;
}

.c8 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
}

.c8:hover,
.c8:focus,
.c8:focus-within,
.c8[aria-expanded="true"] {
  color: #3e486e;
}

.c12 {
  margin-left: 1rem;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c6 {
  width: calc(50% * 1);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c15 {
  width: calc(50% * 0.5494311811023621);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c7 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:980px) {
  .c5 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c6 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c15 {
    width: calc(100% * 0.5494311811023621);
  }
}

@media (max-width:980px) {
  .c7 {
    width: 100%;
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à 
    <strong
      class="c1 c2"
    >
      15 875,00
       € brut
    </strong>
    .
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c3"
  >
    <div>
      <div
        class="c4"
      >
        Votre indemnite légale
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <span
          class="c7"
        >
          15 875,00
           € brut
        </span>
      </div>
      <div>
        <div
          aria-expanded="false"
          class="c8"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="c9 c10"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <span
            class="c11 c12"
            font-size="hsmall"
            font-weight="600"
          >
            Voir le détail du calcul
          </span>
        </div>
        <div
          class="c13"
        >
          <h2
            class="c0"
          >
            Éléments saisis
          </h2>
          <ul>
            <li>
              Ancienneté totale (A)
               : 
              <strong>
                13.08
              </strong>
            </li>
            <li>
              Licenciement pour inaptitude
               : 
              <strong>
                non
              </strong>
            </li>
            <li>
              Salaire de réference (Sref)
               : 
              <strong>
                4500
              </strong>
            </li>
            <li>
              Ancienneté au delà de 10ans (A2)
               : 
              <strong>
                3.08
              </strong>
            </li>
          </ul>
          <h2
            class="c0"
          >
            Formule
          </h2>
          <div
            class="c14"
          >
            <div>
              <span
                class="katex-display"
              >
                <span
                  class="katex"
                >
                  <span
                    class="katex-mathml"
                  >
                    <math
                      display="block"
                      xmlns="http://www.w3.org/1998/Math/MathML"
                    >
                      <semantics>
                        <mrow>
                          <mo
                            stretchy="false"
                          >
                            (
                          </mo>
                          <mfrac>
                            <mn>
                              1
                            </mn>
                            <mn>
                              4
                            </mn>
                          </mfrac>
                          <mo>
                            ×
                          </mo>
                          <mi>
                            S
                          </mi>
                          <mi>
                            r
                          </mi>
                          <mi>
                            e
                          </mi>
                          <mi>
                            f
                          </mi>
                          <mo>
                            ×
                          </mo>
                          <mn>
                            10
                          </mn>
                          <mo
                            stretchy="false"
                          >
                            )
                          </mo>
                          <mo>
                            +
                          </mo>
                          <mo
                            stretchy="false"
                          >
                            (
                          </mo>
                          <mfrac>
                            <mn>
                              1
                            </mn>
                            <mn>
                              3
                            </mn>
                          </mfrac>
                          <mo>
                            ×
                          </mo>
                          <mi>
                            S
                          </mi>
                          <mi>
                            r
                          </mi>
                          <mi>
                            e
                          </mi>
                          <mi>
                            f
                          </mi>
                          <mo>
                            ×
                          </mo>
                          <mi>
                            A
                          </mi>
                          <mn>
                            2
                          </mn>
                          <mo
                            stretchy="false"
                          >
                            )
                          </mo>
                        </mrow>
                        <annotation
                          encoding="application/x-tex"
                        >
                          (\\frac{1}{4} \\times Sref \\times 10) + (\\frac{1}{3} \\times Sref \\times A2)
                        </annotation>
                      </semantics>
                    </math>
                  </span>
                  <span
                    aria-hidden="true"
                    class="katex-html"
                  >
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:2.00744em;vertical-align:-0.686em;"
                      />
                      <span
                        class="mopen"
                      >
                        (
                      </span>
                      <span
                        class="mord"
                      >
                        <span
                          class="mopen nulldelimiter"
                        />
                        <span
                          class="mfrac"
                        >
                          <span
                            class="vlist-t vlist-t2"
                          >
                            <span
                              class="vlist-r"
                            >
                              <span
                                class="vlist"
                                style="height:1.32144em;"
                              >
                                <span
                                  style="top:-2.314em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="mord"
                                  >
                                    <span
                                      class="mord"
                                    >
                                      4
                                    </span>
                                  </span>
                                </span>
                                <span
                                  style="top:-3.23em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="frac-line"
                                    style="border-bottom-width:0.04em;"
                                  />
                                </span>
                                <span
                                  style="top:-3.677em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="mord"
                                  >
                                    <span
                                      class="mord"
                                    >
                                      1
                                    </span>
                                  </span>
                                </span>
                              </span>
                              <span
                                class="vlist-s"
                              >
                                ​
                              </span>
                            </span>
                            <span
                              class="vlist-r"
                            >
                              <span
                                class="vlist"
                                style="height:0.686em;"
                              >
                                <span />
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="mclose nulldelimiter"
                        />
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                      />
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.05764em;"
                      >
                        S
                      </span>
                      <span
                        class="mord mathnormal"
                      >
                        re
                      </span>
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.10764em;"
                      >
                        f
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:1em;vertical-align:-0.25em;"
                      />
                      <span
                        class="mord"
                      >
                        10
                      </span>
                      <span
                        class="mclose"
                      >
                        )
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        +
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:2.00744em;vertical-align:-0.686em;"
                      />
                      <span
                        class="mopen"
                      >
                        (
                      </span>
                      <span
                        class="mord"
                      >
                        <span
                          class="mopen nulldelimiter"
                        />
                        <span
                          class="mfrac"
                        >
                          <span
                            class="vlist-t vlist-t2"
                          >
                            <span
                              class="vlist-r"
                            >
                              <span
                                class="vlist"
                                style="height:1.32144em;"
                              >
                                <span
                                  style="top:-2.314em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="mord"
                                  >
                                    <span
                                      class="mord"
                                    >
                                      3
                                    </span>
                                  </span>
                                </span>
                                <span
                                  style="top:-3.23em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="frac-line"
                                    style="border-bottom-width:0.04em;"
                                  />
                                </span>
                                <span
                                  style="top:-3.677em;"
                                >
                                  <span
                                    class="pstrut"
                                    style="height:3em;"
                                  />
                                  <span
                                    class="mord"
                                  >
                                    <span
                                      class="mord"
                                    >
                                      1
                                    </span>
                                  </span>
                                </span>
                              </span>
                              <span
                                class="vlist-s"
                              >
                                ​
                              </span>
                            </span>
                            <span
                              class="vlist-r"
                            >
                              <span
                                class="vlist"
                                style="height:0.686em;"
                              >
                                <span />
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="mclose nulldelimiter"
                        />
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                      />
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.05764em;"
                      >
                        S
                      </span>
                      <span
                        class="mord mathnormal"
                      >
                        re
                      </span>
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.10764em;"
                      >
                        f
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:1em;vertical-align:-0.25em;"
                      />
                      <span
                        class="mord mathnormal"
                      >
                        A
                      </span>
                      <span
                        class="mord"
                      >
                        2
                      </span>
                      <span
                        class="mclose"
                      >
                        )
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
          <h2
            class="c0"
          >
            Sources
          </h2>
          <ul>
            <li>
              <a
                aria-label="Article L.1234-9 (nouvelle fenêtre)"
                href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000035644154&cidTexte=LEGITEXT000006072050&dateTexte=20170924"
                rel="noopener noreferrer"
                target="_blank"
                title="Consultez l’article l.1234-9"
              >
                Article L.1234-9
              </a>
            </li>
            <li>
              <a
                aria-label="Article R1234-1 à R1234-4 (nouvelle fenêtre)"
                href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000018537572&cidTexte=LEGITEXT000006072050&dateTexte=20170927"
                rel="noopener noreferrer"
                target="_blank"
                title="Consultez l’article r1234-1 à r1234-4"
              >
                Article R1234-1 à R1234-4
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c4"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c5"
      >
        <div
          class="c15"
        />
        <span
          class="c7"
        >
          8 722,22
           € brut
        </span>
      </div>
      <div>
        <div
          aria-expanded="false"
          class="c8"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="c9 c10"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <span
            class="c11 c12"
            font-size="hsmall"
            font-weight="600"
          >
            Voir le détail du calcul
          </span>
        </div>
        <div
          class="c13"
        >
          <h2
            class="c0"
          >
            Éléments saisis
          </h2>
          <ul>
            <li>
              Salaire de référence (Sref)
               : 
              <strong>
                2000
              </strong>
            </li>
            <li>
              Coefficient d'indemnité conventionnel (C)
               : 
              <strong>
                0.33
              </strong>
            </li>
            <li>
              Ancienneté conventionnelle (A)
               : 
              <strong>
                13.08
              </strong>
            </li>
          </ul>
          <h2
            class="c0"
          >
            Formule
          </h2>
          <div
            class="c14"
          >
            <div>
              <span
                class="katex-display"
              >
                <span
                  class="katex"
                >
                  <span
                    class="katex-mathml"
                  >
                    <math
                      display="block"
                      xmlns="http://www.w3.org/1998/Math/MathML"
                    >
                      <semantics>
                        <mrow>
                          <mo
                            stretchy="false"
                          >
                            (
                          </mo>
                          <mi>
                            C
                          </mi>
                          <mo>
                            ×
                          </mo>
                          <mi>
                            S
                          </mi>
                          <mi>
                            r
                          </mi>
                          <mi>
                            e
                          </mi>
                          <mi>
                            f
                          </mi>
                          <mo>
                            ×
                          </mo>
                          <mi>
                            A
                          </mi>
                          <mo
                            stretchy="false"
                          >
                            )
                          </mo>
                        </mrow>
                        <annotation
                          encoding="application/x-tex"
                        >
                          (C \\times Sref \\times A)
                        </annotation>
                      </semantics>
                    </math>
                  </span>
                  <span
                    aria-hidden="true"
                    class="katex-html"
                  >
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:1em;vertical-align:-0.25em;"
                      />
                      <span
                        class="mopen"
                      >
                        (
                      </span>
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.07153em;"
                      >
                        C
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                      />
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.05764em;"
                      >
                        S
                      </span>
                      <span
                        class="mord mathnormal"
                      >
                        re
                      </span>
                      <span
                        class="mord mathnormal"
                        style="margin-right:0.10764em;"
                      >
                        f
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                      <span
                        class="mbin"
                      >
                        ×
                      </span>
                      <span
                        class="mspace"
                        style="margin-right:0.2222222222222222em;"
                      />
                    </span>
                    <span
                      class="base"
                    >
                      <span
                        class="strut"
                        style="height:1em;vertical-align:-0.25em;"
                      />
                      <span
                        class="mord mathnormal"
                      >
                        A
                      </span>
                      <span
                        class="mclose"
                      >
                        )
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;
